# fraude-seguros-automovil

./: README.md
fraude_en_seguros_de_automovil/: README.md  databricks.yml  pyproject.toml
fraude_en_seguros_de_automovil/notebooks/: 04_Features_Store_Registration.ipynb  05_Training_Dataset_Generation.ipynb  07_Evaluation_Job.ipynb  07_MLflow_Experimentation.ipynb  07_Training_Job.ipynb  07_Utils.py  08_Production.ipynb  08_Utils.py  09_Inference_And_Label_Enrichment.ipynb  09_Utils.py  10_Simulation.ipynb
fraude_en_seguros_de_automovil/resources/: fraude_en_seguros_de_automovil_etl.pipeline.yml  sample_job.job.yml
fraude_en_seguros_de_automovil/src/fraude_en_seguros_de_automovil_etl/: README.md
fraude_en_seguros_de_automovil/src/fraude_en_seguros_de_automovil_etl/rules/: __init__.py  claims.py  labels.py  policies.py
fraude_en_seguros_de_automovil/src/fraude_en_seguros_de_automovil_etl/transformations/: 01_bronze_ingestion.py  02_silver_transformation.py  03_gold_fraud_spine.py  03_gold_policy_aggregations.py  03_gold_policy_profile.py
